[package]
name = "try_reserve"
authors = ["Dari-OS <darius.dev@proton.me>"]
description = " Stable implementation of the TryReserveError from std for custom collections"
readme = "README.md"
repository = "https://github.com/Dari-OS/try_reserve"
license = "MIT OR Apache-2.0"
categories = ["no-std", "no-std::no-alloc", "data-structures"]
keywords = ["no-std", "stabilization", "reserve", "try_reserve", "trait"]
# Befor changing this change the version value under Usage in the Readme.md
version = "0.1.3"
# TODO: Update to `2024` when the nixos repo has the corresponding rust version (1.85.0)
edition = "2021"


[features]
no_std = []
